--- a/_projects/2019-05-23-aurora.md
+++ b/_projects/2019-05-23-aurora.md
@@ -7,7 +7,7 @@ featured_image: '/images/aurora/aurora_thumb.jpg'
 
 ![](/images/aurora/aurora_01.jpg)
 
-## Demo content
+## Uma bússola para bicicletas
 
 O crescente número de ciclovias e bicicletários são um indício de que bicicletas são uma ótima opção como meio de transporte diário. O Aurora é um dispositivo que por meio de comunicação BLE(Bluetooth Low Energy) se conecta a um *smartphone* que executa uma aplicação de navegação. A aplicação envia comandos para o dispositivo que são traduzidos em indicações de direção por meio dos LEDs presenstes na placa, indicando o caminho que o usuário deve seguir para chegar ao destino desejado conduzindo a bicicleta de forma segura enquanto seu *smartphone* está guardado no bolso, ou mochila, durante o trajeto.
 
